tests/parser/add-expression-error.stderr
error: expected expression
 --> $DIR/add-expression-error.lox:1:5
  |
1 | 5 + /;
  |     ^
